// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary component with a single paragraph 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Headline
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      Test paragraph
      ...
    </div>
  </div>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "attributes": Object {
              "slug": "camilla-long",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Camilla Long",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "author",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": ", Environment Editor",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "inline",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`2. article summary with opinion byline 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <ArticleBylineOpinion
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
      isOpinionByline={true}
    />
  </div>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Headline
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      Test paragraph
      ...
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
</div>
`;

exports[`3. article summary component with multiple paragraphs 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Headline
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      Test paragraph 1.
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
       
      Test paragraph 2
      ...
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`4. article summary component with content including line breaks 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      <b>
        Review 1
      </b>
      <br />
       ITV
      <br />
      ★★★★☆
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
       
      <b>
        Review 2
      </b>
      <br />
       BBC Two
      <br />
      ★★★☆☆
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
       
      Test paragraph
      ...
    </div>
  </div>
</div>
`;

exports[`5. article summary component containing links 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Headline
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      >
        Sajid Javid
      </div>
       has warned the Home Office to expect an overhaul after the 
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      >
        Windrush scandal
      </div>
       as he ditches the policy of creating a “hostile
      ...
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
</div>
`;

exports[`6. article summary component with headline and no content 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Headline
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-07-01T14:32:00.000Z"
      publication="SUNDAYTIMES"
    />
  </div>
</div>
`;

exports[`7. article summary component with empty content at the end trimmed 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Headline
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      Test paragraph 1.
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
       
      Test paragraph 2
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
       
      ...
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-07-01T14:32:00.000Z"
      publication="SUNDAYTIMES"
    />
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`8. article summary component with no byline 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Headline
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      Test paragraph
      ...
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
</div>
`;

exports[`9. article summary component with no label 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Headline
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      Test paragraph
      ...
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`10. article summary component with no headline 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      Test paragraph
      ...
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-07-01T14:32:00.000Z"
      publication="SUNDAYTIMES"
    />
  </div>
</div>
`;

exports[`11. article summary component with no date publication 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Headline
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      Test paragraph
      ...
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`12. article summary component with a video label 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <VideoLabel
      color="#333333"
      isVideo={true}
      title="Test label"
    />
  </div>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Headline
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      Test paragraph
      ...
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "A byline",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`13. article summary component with a strapline 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Headline
  </div>
  <div
    aria-level="4"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Strapline
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      Test paragraph
      ...
    </div>
  </div>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {
                  "slug": "camilla-long",
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "Camilla Long",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "author",
              },
            ],
          },
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": ", Environment Editor",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`14. article summary content component without an ast to render null 1`] = `null`;

exports[`16. article summary component with no headline and no label title 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      Test paragraph
      ...
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-07-01T14:32:00.000Z"
      publication="SUNDAYTIMES"
    />
  </div>
</div>
`;

exports[`17. article summary content component with white space height 1`] = `
<div
  className="tc-text__TcText-sc-15igzev-0 lhcAkf"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    
    Test paragraph
    ...
  </div>
</div>
`;

exports[`18. article summary content component without white space height 1`] = `
<div
  className="tc-text__TcText-sc-15igzev-0 lhcAkf"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    
    Test paragraph
    ...
  </div>
</div>
`;

exports[`19. article summary component with a single paragraph and flag on tablet 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <ArticleLabel
      color="#333333"
      title="Camilla Long"
    />
  </div>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Headline
  </div>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      Test paragraph
      ...
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "attributes": Object {
              "slug": "camilla-long",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Camilla Long",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "author",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": ", Environment Editor",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "inline",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`20. article summary component with a strapline and flag on tablet 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <ArticleLabel
      color="#333333"
      title="Camilla Long"
    />
  </div>
  <div
    aria-level="3"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Headline
  </div>
  <div
    aria-level="4"
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    role="heading"
  >
    Test Strapline
  </div>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
    >
      
      Test paragraph
      ...
    </div>
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {
                  "slug": "camilla-long",
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "Camilla Long",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "author",
              },
            ],
          },
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": ", Environment Editor",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;
